--- a/solution-advanced-hw3/css/style.css
+++ b/solution-advanced-hw3/css/style.css
@@ -6,8 +6,6 @@ body {
     /* Set the default font family and color*/
     font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
-
-    /* border-style: solid; */
   
     /* Set the background color*/
     background-color: white;
@@ -17,7 +15,7 @@ body {
 nav{
     display: flex;
     margin-top: 45px;
-    margin-bottom: 45px;
+    margin-bottom: 10px;
     justify-content: flex-end;
     gap: 50px;
 
@@ -165,11 +163,6 @@ select {
     font-size: 18px;
 }
 
-.btn-pack-size:hover {
-    font-weight: 700;
-    background-color: lightgray;
-}
-
 .add-to-cart {
     margin-top: 25px;
     display: flex;
@@ -195,6 +188,14 @@ select {
     background-color: yellow;
   }
 
+
+.cart-content {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-right: 60px;
+    text-align: right;
+    font-size: 18px;
+}
 
 
 /************NO USE AFTER THIS LINE*******/
