--- a/solution-advanced-hw3/css/style.css
+++ b/solution-advanced-hw3/css/style.css
@@ -16,6 +16,7 @@ nav{
     display: flex;
     margin-top: 45px;
     margin-bottom: 10px;
+    padding-right: 50px;
     justify-content: flex-end;
     gap: 50px;
 
@@ -192,10 +193,52 @@ select {
 .cart-content {
     margin-top: 0px;
     margin-bottom: 0px;
-    padding-right: 60px;
+    padding-right: 110px;
     text-align: right;
     font-size: 18px;
 }
+
+#cartPopup {
+    display: none;
+    width: 220px;
+    margin-left: -70px;
+    border-style: solid;
+    border-color: gray;
+    border-width: 2px;
+    background-color: white;
+    padding: 8px;
+    position: absolute;
+    text-align: left;
+    font-size: 18px;
+    
+}
+
+#cartPopup.edit-mode {
+    display: block;
+    animation: fadeIn 0.5s
+}
+
+.popup-summary {
+    margin-top:0px;
+    margin-bottom: 0px;
+}
+
+#popup-name {
+    margin-top: 20px;
+    font-weight: 700;
+}
+
+
+/* fade in animation for the pop up */
+/* Source: https://www.w3schools.com/howto/howto_js_popup.asp */
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1;}
+}
+
+
+
+
 
 
 /************NO USE AFTER THIS LINE*******/
